<resources>
    <string name="app_name">Universal Yoga</string>
    <string name="workshop_description">Workshop Description</string>
    <string name="add_workshop">Add Class</string>
    <string name="search_workshop">Search</string>
    <string name="edit_workshop">Edit Workshop</string>
    <string name="workshop_name">Workshop Name</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="yoga_type">Yoga Type</string>
    <string name="capacity">Capacity</string>
    <string-array name="teacher_names">
        <item>Kevin</item>
        <item>Muhammad</item>
        <item>Claire</item>
        <item>Thomas</item>
        <item>Julie</item>
        <item>Michael</item>
    </string-array>
    <string-array name="yoga_types_array">
        <item>Vinyasa yoga</item>
        <item>Hatha yoga</item>
        <item>Iyengar yoga</item>
        <item>Kundalini yoga</item>
        <item>Ashtanga yoga</item>
    </string-array>
    <string-array name="capacity_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
    </string-array>
</resources>