<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextWorkshopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/workshop_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextWorkshopDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextWorkshopName"
            android:layout_marginTop="214dp"
            android:hint="@string/workshop_description"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextWorkshopDescription"
            android:layout_marginTop="16dp"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColorHint="#616161" /> <!-- Remove inputType to prevent keyboard from showing -->

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDate"
            android:layout_marginTop="136dp"
            android:hint="@string/start_time"
            android:inputType="time"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            tools:ignore="NotSibling" />

        <!-- Label for Workshop Capacity -->

        <!-- Label for Yoga Type -->

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextStartTime"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/end_time"
            android:inputType="time"
            android:minHeight="48dp"
            android:textColorHint="#37474F" />

        <TextView
            android:id="@+id/textViewCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerCapacity"
            android:layout_alignStart="@id/spinnerWorkshopType"
            android:layout_marginStart="0dp"
            android:layout_marginTop="38dp"
            android:text="Class Type"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <Spinner
            android:id="@+id/spinnerCapacity"
            android:layout_width="376dp"
            android:layout_height="52dp"
            android:layout_below="@id/editTextEndTime"
            android:layout_marginTop="303dp"
            android:entries="@array/capacity_options" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerCapacity"
            android:layout_marginTop="-179dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#37474F" />

        <TextView
            android:id="@+id/textViewYogaType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPrice"
            android:layout_alignStart="@id/spinnerWorkshopType"
            android:layout_marginStart="0dp"
            android:layout_marginTop="38dp"
            android:text="Capacity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerWorkshopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewYogaType"
            android:layout_marginTop="140dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonAddWorkshop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerWorkshopType"
            android:layout_marginTop="63dp"
            android:text="@string/add_workshop" />

    </RelativeLayout>
</ScrollView>